Issue: #562 [Frontend](bottom navbar): Add bottom navbar instead of sidebar for mobile view

--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -44,6 +44,9 @@
   "SidebarPopularTagsText": "Popular tags",
   "SidebarWalletText" : "Wallet",
   "SidebarHotTipsText": "Hot tips",
+  "SidebarSearchText": "Search",
+  "SidebarNotificationText": "Norification",
+  "SidebarChatText": "Chat",
 
   "ChatSidebarSearchInputLabel": "Search a chat",
   "ChatFollowingDialogTitle": "Start a new conversation",
