Task: #643 Add Confirm/Rejected buttons on Followers list

--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -38,6 +38,9 @@
   "SecondTextFollowerItem": "recommended",
   "FollowerBtnTextFollowerItem": "Follow",
   "FollowingBtnTextFollowerItem": "Following",
+  "ConfirmBtnTextFollowerItem": "Confirm",
+  "DeclineBtnTextFollowerItem": "Decline",
+  "UnrejectBtnTextFollowerItem": "Undo",
 
   "SidebarFeedText": "Feed",
   "SidebarExploreText": "Explore",
