--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -83,12 +83,16 @@
   "Name": "Name",
   "LastName": "Last Name",
   "Bithdate": "Date of birth",
-  "ExpDate": "ID experation date",
+  "ExpDate": "Experation date",
   "DocType": "Document Type",
   "Country" : "Country",
   "Address": "Address",
   "City": "City",
   "State": "State/Province",
-  "Postal": "Postal/ZIP"
+  "Postal": "Postal/ZIP",
+
+  "CardNumber": "Card number",
+  "NameOnCard": "Name on card"
+
 
 }
