Task: #858 [Frontend] Create new section 'Whats News'

--- a/client/public/locales/ru/translation.json
+++ b/client/public/locales/ru/translation.json
@@ -73,6 +73,7 @@
   "NavbarMenuItemPostSavedText": "Saved",
   "NavbarMenuItemSettingsText": "Settings",
   "NavbarMenuItemHelpText": "Help and support",
+  "NavbarMenuItemChangeLogText": "Что нового?",
   "NavbarMenuItemDarkMode": "Dark mode",
   "NavbarMenuItemLightMode": "Light mode",
   "NavbarMenuItemSignOutText": "Sign Out",
