--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -73,6 +73,7 @@
   "NavbarMenuItemPostSavedText": "Saved",
   "NavbarMenuItemSettingsText": "Settings",
   "NavbarMenuItemHelpText": "Help and support",
+  "NavbarMenuItemChangeLogText": "What's News",
   "NavbarMenuItemDarkMode": "Dark mode",
   "NavbarMenuItemLightMode": "Light mode",
   "NavbarMenuItemSignOutText": "Sign Out",
