HotFix: Minor changes

--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -46,7 +46,7 @@
   "UnrejectBtnTextFollowerItem": "Undo",
 
   "SidebarProfileText": "My profile",
-  "SidebarFeedText": "Feed",
+  "SidebarFeedText": "Home",
   "SidebarExploreText": "Explore",
   "SidebarActivityText": "Activity",
   "SidebarPopularTagsText": "Popular tags",
