--- a/client/public/locales/ru/translation.json
+++ b/client/public/locales/ru/translation.json
@@ -46,7 +46,7 @@
   "UnrejectBtnTextFollowerItem": "Отменить",
 
   "SidebarProfileText": "Профайл",
-  "SidebarFeedText": "Feed",
+  "SidebarFeedText": "Домой",
   "SidebarExploreText": "Explore",
   "SidebarActivityText": "Активность",
   "SidebarPopularTagsText": "Популярные ТЭГи",
