Bugfix: #938 [Frontend] Update Current Room IsBlocked status

--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -67,7 +67,8 @@
 
   "ChatRoomMenuItemContactText": "Contact info",
   "ChatRoomMenuItemDeleteText": "Delete chat",
-  "ChatRoomMenuItemAddAccountToBlackListText": "Block",
+  "ChatRoomMenuItemBlockUserText": "Block",
+  "ChatRoomMenuItemUnblockUserText": "Unblock",
   "ChatRoomMenuItemClearText": "Clear history",
 
   "NavbarMenuItemProfileText": "Profile",
