--- a/client/public/locales/ru/translation.json
+++ b/client/public/locales/ru/translation.json
@@ -66,7 +66,8 @@
 
   "ChatRoomMenuItemContactText": "Contact info",
   "ChatRoomMenuItemDeleteText": "Delete chat",
-  "ChatRoomMenuItemAddAccountToBlackListText": "Block",
+  "ChatRoomMenuItemBlockUserText": "Block",
+  "ChatRoomMenuItemUnblockUserText": "Unblock",
   "ChatRoomMenuItemClearText": "Clear history",
 
   "NavbarMenuItemProfileText": "Профайл",
